--- a/rise/sub/css/style.css
+++ b/rise/sub/css/style.css
@@ -91,7 +91,7 @@ body {
   }
 
   #social-icons {
-    padding: 300px 0px 0px 15px;
+/*     padding: 300px 0px 0px 15px; */
     /* font-size: 40px; */
     /* color: #2d3436; */
   }
